--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ html {
 }
 
 body {
-    font-family: 'Hind Siliguri', sans-serif;
+    font-family: 'Baloo Da 2', cursive;
     background: var(--gray-100);
     color: var(--gray-800);
     line-height: 1.6;
